[workspace]
members = [
    "crates/voxel_config",
    "crates/voxel_math",
    "crates/voxel_render",
    "crates/voxel_winput",
]
exclude = []

[workspace.package]
authors = ["MasonFeurer", "CatCode79"]
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.93"
version = "0.1.0"

[workspace.dependencies]
bitflags = "2"
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
fastrand = "2"
glam = "0.32"
hashbrown = "0.16"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_error"] }
nanoserde = "0.2"
num_cpus = "1"
pollster = "0.4"
profiling = { version = "1", default-features = false , features = ["profile-with-tracy"]}
raw-window-handle = "0.6"
wgpu = { version = "28", default-features = false, features = ["wgsl", "dx12", "vulkan"] }
wgt = { version = "28", package = "wgpu-types"}

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
module_inception = "allow"
multiple_crate_versions = "allow"
new_without_default = "allow"
pub_underscore_fields = "allow"
redundant_pub_crate = "allow"
wildcard_imports = "allow"

[package]
name = "voxel-path-tracer"
description = "Voxel open simplex world path traced"
authors.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
voxel_config = { path = "crates/voxel_config" }
voxel_math = { path = "crates/voxel_math" }
voxel_render = { path = "crates/voxel_render" }
voxel_winput = { path = "crates/voxel_winput" }

env_logger = { workspace = true }
fastrand = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
profiling = { workspace = true }

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked" # faster linking
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false # Different values slows compilation time (and linking) too much
panic = "unwind"
incremental = true
codegen-units = 256

[profile.dev.package."*"]
inherits = "dev"

[profile.release]
opt-level = 3
debug = false
#split-debuginfo = "" # Useless to set, debug is false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 16

[profile.release.package."*"]
inherits = "release"
