[workspace]
members = [
    "crates/voxel_config",
    "crates/voxel_math",
    "crates/voxel_render",
    "crates/voxel_winput",
]
exclude = []

[workspace.package]
authors = ["MasonFeurer", "CatCode79"]
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.94"
version = "0.1.0"

#- Dependencies ------------------------------------------------------------------------------------

[workspace.dependencies]
bitflags = "2"
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
fastrand = "2"
glam = "0.32"
hashbrown = { version = "0.16", default-features = false, features = ["default-hasher", "inline-more"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_error"] }
nanoserde = { version = "0.2", default-features = false, features = ["json", "std"] }
num_cpus = "1"
pollster = "0.4"
profiling = { version = "1", default-features = false , features = ["profile-with-tracy"]}
raw-window-handle = "0.6"
wgpu = { version = "29", default-features = false, features = ["dx12", "parking_lot", "vulkan", "wgsl"] }
wgt = { version = "29", package = "wgpu-types"}

#- Clippy ------------------------------------------------------------------------------------------

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
module_inception = "allow"
multiple_crate_versions = "allow"
new_without_default = "allow"
pub_underscore_fields = "allow"
redundant_pub_crate = "allow"
wildcard_imports = "allow"

#- Package -----------------------------------------------------------------------------------------

[package]
name = "voxel-ray-tracing"
description = "Voxel open simplex world ray traced"
authors.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
voxel_config = { path = "crates/voxel_config" }
voxel_math = { path = "crates/voxel_math" }
voxel_render = { path = "crates/voxel_render" }
voxel_winput = { path = "crates/voxel_winput" }

env_logger = { workspace = true }
fastrand = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
profiling = { workspace = true }

#- Profiles ----------------------------------------------------------------------------------------

[profile.dev]
opt-level = 1
debug = "full"
split-debuginfo = "unpacked" # faster linking
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false # Different values slows compilation time (and linking) too much
panic = "unwind"
incremental = true
codegen-units = 16

[profile.dev.package."*"]
inherits = "dev"

[profile.release]
opt-level = 3
debug = false
#split-debuginfo = "" # Useless to set, debug is false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 2

[profile.release.package."*"]
inherits = "release"
