[package]
name = "voxel_config"
description = "Game configuration library"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
log = { workspace = true }
nanoserde = { workspace = true }
