[package]
name = "voxel_render"
description = "Renderer library built upon wgpu"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[features]
default = []
debug = []
wgsl = []

[dependencies]
voxel_math = { path = "../voxel_math" }

glam = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
#profiling = { workspace = true }
raw-window-handle = { workspace = true }
wgpu = { workspace = true }
